--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "Noise Not Found"
+title: "Ladrido Not Found"
 permalink: /404.html
-description: "Página no encontrada. Page Not Found. ページが見つかりません."
+description: "Página no encontrada. Page Not Found. Woof woof!"
 image:
   feature: banners/header.png
 timing: false
@@ -10,9 +10,7 @@ share: false
 error: true
 ---  
 
-Lo sentimos, pero la página que estás intentando ver no existe. Pero oye, siempre puedes pasarte por el [grupo de Telegram](https://t.me/inter_ferencias) a conversar un rato sobre cualquier tema relacionado o proponer nuevos temas que te parezcan interesantes.
-
-\#somosruido 💻✊📣
+Wow, very not this page. Such 404. 
 
 <figure>
 	<img src="{{ "/assets/images/logo.png" }}" alt="" style="display:block;margin:auto;">
