añado un wow de prueba

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -10,7 +10,7 @@ share: false
 error: true
 ---  
 
-Wow, very not this page. Such 404. 
+Wow, very not this page. Such 404. Wow.
 
 <figure>
 	<img src="{{ "/assets/images/logo.png" }}" alt="" style="display:block;margin:auto;">
